--- a/index.html
+++ b/index.html
@@ -3,48 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Presente Especial</title>
+    <title>Marcela</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>aniversário</h1>
-    <p>a</p>
+    <img src="https://github.com/shwdaniel7/birthday/blob/main/media/birthdaysnoopy.png?raw=true" alt="birthdaysnoopy" class="snoopy">
+    <h1>feliz aniversário cela!!!</h1>
+    <p>parabéns! sei que você falou que não queria nenhum presente, mas fiz esse site pra demonstrar o quanto importante vc é pra mim.<br>
+    ficou meio bobo e bem boiola, mas espero que goste 😜</p>
 
-    <!-- Imagens do Snoopy e Pochacco -->
-    <div>
-        <img src="snoopy.png" alt="Snoopy" class="character">
-        <img src="pocchaco.png" alt="Pochacco" class="character">
-    </div>
+    <footer>"Eu acredito que a cadência e a harmonia certas no momento certo podem despertar qualquer sentimento, inclusive o de felicidade nos momentos mais sombrios."<br>
+    — Yoñlu </footer>
 
-    <!-- Botão para mostrar a mensagem -->
+    <img src="https://github.com/shwdaniel7/birthday/blob/main/media/snoopy3.png?raw=true" alt="snoopy3" class="snoopy2">
+    
     <button id="show-message">mensagem</button>
     <div id="hidden-message" class="hidden-content">
-        <p>a</p>
+        <p>parabénsss, cela! muita saúde e felicidade pra vc. espero que, neste ano, muitas coisas boas aconteçam com vc, que tudo dê certo na escola e tudo mais. quero que você saiba que é alguém muito importante pra mim. te conhecer foi a melhor coisa que me aconteceu nesses últimos anos. sua presença me traz um conforto que não consigo simplificar em palavras. obrigado por ser essa pessoa incrível. que, algum dia, você consiga reconhecer o quão maravilhosa você é.<br><br>
+        desejo, do fundo do meu coração, que a gente continue se dando bem e se conhecendo ainda mais, e que eu seja a primeira pessoa a te desejar feliz aniversário em todos os seus próximos aniversários 🙈. não importa o quão difícil seja, nunca vou desistir de você. vou ficar do seu lado e te apoiar, pra que um dia você se sinta valorizada como merece e pra que eu possa ver seu sorriso e relembrar que fiz a escolha certa. <br><br>
+        ainda acho que sou insuficiente, tenho meus defeitos e me sinto inseguro o tempo todo, mas consigo me sentir completo quando falo com você. quero que você também se sinta assim quando fala comigo, então tenha paciência comigo 😔🙏. <br><br>
+        enfim, é meio difícil elaborar tudo que eu sinto em palavras, mas não tenho dúvidas de que você é alguém muito especial pra mim e que quero ter você na minha vida. obrigado por você ser você, Marcela, e novamente, meus parabéns.</p>
+        <img src="https://github.com/shwdaniel7/birthday/blob/main/media/pochacco.gif?raw=true" alt="pocchaco" class="snoopy">
     </div>
 
-    <!-- Botão para mostrar a citação e a nova imagem -->
     <button id="show-quote">e nunca se esqueça</button>
     <div id="hidden-quote" class="hidden-content">
+        <p>obrigado por você ser você, te adoro Marcela.</p>
         <p class="quote">“I’ll be by your side, when you need me.” — Sade</p>
-        <img src="snoopy2.png" alt="snoopy2" class="character">
+        <img src="https://github.com/shwdaniel7/birthday/blob/main/media/snoopy2.png?raw=true" alt="snoopy2" class="character">
+        <p class="carinho">feito com carinho 💖 </p>
     </div>
 
-    <footer>feito com carinho ❤️</footer>
-
     <script>
-        // Seleciona os elementos do DOM
         const messageButton = document.getElementById('show-message');
         const quoteButton = document.getElementById('show-quote');
         const hiddenMessage = document.getElementById('hidden-message');
         const hiddenQuote = document.getElementById('hidden-quote');
 
-        // Exibe a mensagem ao clicar no botão
         messageButton.addEventListener('click', () => {
             hiddenMessage.style.display = 'block';
             messageButton.style.display = 'none';
         });
-
-        // Exibe a citação e a nova imagem ao clicar no botão
+        
         quoteButton.addEventListener('click', () => {
             hiddenQuote.style.display = 'block';
             quoteButton.style.display = 'none';
