--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <p class="carinho">feito com carinho 💖 </p>
     </div>
 
+    <button onclick="window.location.href='fy.html'">pra você</button>
+    
     <script>
         const messageButton = document.getElementById('show-message');
         const quoteButton = document.getElementById('show-quote');
