--- a/fy.html
+++ b/fy.html
@@ -33,7 +33,11 @@
             <img class="carta" src="media/enamorados.png" alt="Enamorados">
         </div>
         <div id="mensagem-musical"></div>
-        <button id="finalizar" class="oculto">Finalizar</button>
+        <button id="revelar-surpresa">e para finalizar</button>
+        <div id="mensagem-final" class="oculto">
+            <p>ooi cela! primeiramente devo pedir desculpas pelo clima estranho q acabei criando entre a gente, eu simplesmente odeio ver vc triste e desanimada, e acima de tudo, tenho medo de que isso de alguma forma afaste a gente. tenho medo de que vc acabe me achando insuficiente por não conseguir ajudar nada nessas situações, e realmente eu não consigo ajudar. mas eu não consigo só fingir que não ta acontecendo nada, eu quero ser alguém que você consiga se apoiar e confiar nesses momentos frágeis. eu sei que não sou nada demais, mas eu prometo te ajudar no que eu conseguir, e nunca abandonar você, não importa o que aconteça. são tempos difíceis eu sei, mas quero que você conte comigo para oq precisar, eu não vou começar a me importar menos com você, não importa quanta distância você tente colocar entre a gente, eu vou querer estar do seu lado. obrigado por ler tudo isso, tudo vai ficar bem, ta? todo esse sentimento ruim vai ir embora, e enquanto vc se sentir assim, prometo de dedinho te ajudar a fzr isso passar. deve ser a primeira vez que me esforço e me importo tanto com alguém, você realmente é especial Marcela, é a estrela mais brilhante do meu céu. e eu juro proteger esse brilho.</p>
+            <img id="imagem-final" src="media/luv-u.png" alt="Imagem especial">
+        </div>
     </div>
     
     <script src="script.js"></script>
